list in admin reworked to table, fixing bug when name is too long

--- a/simpla/design/css/style.css
+++ b/simpla/design/css/style.css
@@ -770,6 +770,38 @@ div#sort_links a {
 	width: 600px;
 }
 
+#list2 {
+	/*display: table;*/
+	width:100%;
+	border-bottom: 1px solid #d0d0d0;
+}
+
+#list2 .row {
+	background-color: #f3f3f3;
+	border-collapse: collapse;
+	display: table;
+	width:100%;
+}
+#list2 .tree_row {
+	display: table-row;
+}
+#list2 .cell.icons {
+	white-space: nowrap;
+	text-align: right;
+	padding-right: 10px;
+	padding-left: 10px;
+	zoom: 1;
+}
+#list2 .cell.name {
+	width: 99%;
+}
+#list2 .cell {
+	border-top: 1px solid #d0d0d0;
+	display: table-cell;
+	vertical-align: top;
+	padding: 10px 0 7px;
+}
+
 #list {
 	min-width: 200px;
 	border-bottom: 1px solid #d0d0d0;
@@ -803,7 +835,6 @@ div#sort_links a {
 	padding: 10px 0 7px;
 	float: left;
 }
-
 #list .move {
 	vertical-align: center;
 	width: 20px;
@@ -811,19 +842,31 @@ div#sort_links a {
 	padding-left: 5px;
 }
 
-#list .move div {
+#list2 .move.cell {
+	width: 20px;
+	padding-right: 0;
+	padding-left: 5px;
+}
+#list2 .tree_row:hover {
+	background-color: #f9f9f9;
+}
+
+#list2 .row:nth-child(2n+1) {
+	background-color: #ebebeb;
+}
+#list .move div, #list2 .move div {
 	height: 16px;
 	width: 20px;
 	margin-top: 2px;
 }
 
-#list .checkbox {
+#list .checkbox, #list2 .checkbox {
 	width: 20px;
 	padding-right: 0px;
 	padding-left: 5px;
 }
 
-#list .image {
+#list .image, #list2 .image {
 	width: 35px;
 	padding-bottom: 3px;
 	padding-top: 5px;
@@ -840,7 +883,7 @@ div#sort_links a {
 	border: 1px solid #d3d3d3;
 }
 
-#list .name {
+#list .name, #list2 .name {
 	font-size: 12px;
 	padding-left: 10px;
 	max-width: 600px;
